// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScriptedFieldsTable should filter based on the lang filter 1`] = `
<div>
  <header
    addScriptedFieldUrl="#"
  />
  <call-outs
    deprecatedLangsInUse={
      Array [
        "somethingElse",
      ]
    }
    painlessDocLink="painlessDocs"
  />
  <eui-spacer
    size="l"
  />
  <Table
    deleteField={[Function]}
    editField={[Function]}
    indexPattern={
      Object {
        "getScriptedFields": [Function],
      }
    }
    itemsOnPage={
      Array [
        Object {
          "lang": "painless",
          "name": "ScriptedField",
          "script": "x++",
        },
        Object {
          "lang": "painless",
          "name": "JustATest",
          "script": "z++",
        },
      ]
    }
    onChange={[Function]}
    pageIndex={0}
    pageSize={10}
    sortDirection="asc"
    sortField="name"
    totalItemCount={3}
  />
</div>
`;

exports[`ScriptedFieldsTable should filter based on the query bar 1`] = `
<div>
  <header
    addScriptedFieldUrl="#"
  />
  <call-outs
    deprecatedLangsInUse={Array []}
    painlessDocLink="painlessDocs"
  />
  <eui-spacer
    size="l"
  />
  <Table
    deleteField={[Function]}
    editField={[Function]}
    indexPattern={
      Object {
        "getScriptedFields": [Function],
      }
    }
    itemsOnPage={
      Array [
        Object {
          "lang": "painless",
          "name": "JustATest",
          "script": "z++",
        },
      ]
    }
    onChange={[Function]}
    pageIndex={0}
    pageSize={10}
    sortDirection="asc"
    sortField="name"
    totalItemCount={2}
  />
</div>
`;

exports[`ScriptedFieldsTable should hide the table if there are no scripted fields 1`] = `
<div>
  <header
    addScriptedFieldUrl="#"
  />
  <call-outs
    deprecatedLangsInUse={Array []}
    painlessDocLink="painlessDocs"
  />
  <eui-spacer
    size="l"
  />
</div>
`;

exports[`ScriptedFieldsTable should render normally 1`] = `
<div>
  <header
    addScriptedFieldUrl="#"
  />
  <call-outs
    deprecatedLangsInUse={Array []}
    painlessDocLink="painlessDocs"
  />
  <eui-spacer
    size="l"
  />
  <Table
    deleteField={[Function]}
    editField={[Function]}
    indexPattern={
      Object {
        "getScriptedFields": [Function],
      }
    }
    itemsOnPage={
      Array [
        Object {
          "lang": "painless",
          "name": "ScriptedField",
          "script": "x++",
        },
        Object {
          "lang": "painless",
          "name": "JustATest",
          "script": "z++",
        },
      ]
    }
    onChange={[Function]}
    pageIndex={0}
    pageSize={10}
    sortDirection="asc"
    sortField="name"
    totalItemCount={2}
  />
</div>
`;

exports[`ScriptedFieldsTable should show a delete modal 1`] = `
<div>
  <header
    addScriptedFieldUrl="#"
  />
  <call-outs
    deprecatedLangsInUse={Array []}
    painlessDocLink="painlessDocs"
  />
  <eui-spacer
    size="l"
  />
  <Table
    deleteField={[Function]}
    editField={[Function]}
    indexPattern={
      Object {
        "getScriptedFields": [Function],
      }
    }
    itemsOnPage={
      Array [
        Object {
          "lang": "painless",
          "name": "ScriptedField",
          "script": "x++",
        },
        Object {
          "lang": "painless",
          "name": "JustATest",
          "script": "z++",
        },
      ]
    }
    onChange={[Function]}
    pageIndex={0}
    pageSize={10}
    sortDirection="asc"
    sortField="name"
    totalItemCount={2}
  />
  <eui-overlay-mask>
    <eui-confirm-modal
      cancelButtonText="Cancel"
      confirmButtonText="Delete"
      onCancel={[Function]}
      onConfirm={[Function]}
      title="Delete scripted field 'ScriptedField'?"
    />
  </eui-overlay-mask>
</div>
`;
